--- a/Rick-Player.Main/_Imports.razor
+++ b/Rick-Player.Main/_Imports.razor
@@ -1,15 +1,21 @@
-﻿@using System.Net.Http
+﻿@using System.Net
+@using System.Net.Http
+@using System.Net.Http.Json
+@using System.Threading
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Microsoft.Extensions.Localization
+
 @using Rick_Player.Main
 @using Rick_Player.Main.Shared
-@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Rick_Player.Main.Data
-@using System.Net
-@using Microsoft.Extensions.Localization
+
+@using MudBlazor
+
 
