--- a/Rick-Player.Main/_Imports.razor
+++ b/Rick-Player.Main/_Imports.razor
@@ -13,8 +13,9 @@
 @using Microsoft.Extensions.Localization
 
 @using Rick_Player.Main
-@using Rick_Player.Main.Shared
 @using Rick_Player.Main.Data
+@using Rick_Player.Main.Shared
+@using static Rick_Player.Main.Data.Track
 
 @using MudBlazor
 
