Conflito de merge

--- a/Rick-Player.Main/Pages/WelcomePage.razor
+++ b/Rick-Player.Main/Pages/WelcomePage.razor
@@ -18,7 +18,7 @@
     </MudText>
 
     <MudText Typo="Typo.h6" Align="Align.Center">
-        Rick Player é um aplicativo de código aberto que permite que você e seus amigos ouçam música juntos usando a fila do Youtube.
+        Rick Player, é um aplicativo de código aberto que permite que você e seus amigos ouçam música juntos usando a fila do Youtube.
     </MudText>
 
 
