--- a/Rick-Player.Main/Shared/MainNoNavMenuLayout.razor
+++ b/Rick-Player.Main/Shared/MainNoNavMenuLayout.razor
@@ -1,4 +1,5 @@
 @inherits LayoutComponentBase
+
 @using Rick_Player.Main.Components
 
 <MudThemeProvider @bind-IsDarkMode="@_isDarkMode"/>
@@ -15,5 +16,5 @@
 </MudLayout>
 
 @code {
-    bool _isDarkMode = false;
+    bool _isDarkMode = true;
 }
