--- a/Rick-Player.Main/Components/TrackCard.razor
+++ b/Rick-Player.Main/Components/TrackCard.razor
@@ -5,10 +5,10 @@
 
 <MudPaper Class="pa-4">
     <MudStack Row="true">
-        <MudImage ObjectFit="ObjectFit.Cover" Height="64" Src=@Track.CoverSizesUrl[(int)CoverSize.Small] Alt="Album cover" Elevation="25" Class="rounded-sm" />
+        <MudImage ObjectFit="ObjectFit.Cover" Height="64" Src=@Track.CoverSizesUrl[(int)CoverSize.Default] Alt="Album cover" Elevation="25" Class="rounded-sm"/>
         <MudStack Justify="Justify.Center" Spacing="0">
             <MudText Typo="Typo.body1">
-                @(Track.VideoId?.Length <= MAX_CHARS ? Track.VideoId : Track.VideoId?.Substring(0, MAX_CHARS) + "...")
+                @(Track.Name?.Length <= MAX_CHARS ? Track.Name : Track.Name?.Substring(0, MAX_CHARS) + "...")
             </MudText>
             <MudText Typo="Typo.body2">@Track.ArtistNames[0]</MudText>
             @if (Client is not null)
@@ -17,8 +17,7 @@
             }
         </MudStack>
 
-        <MudSpacer />
-
+        <MudSpacer/>
         <div>
             @switch (BtnFunc)
             {
@@ -38,14 +37,25 @@
 </MudPaper>
 
 @code {
-        private const int MAX_CHARS = 26;
+    private const int MAX_CHARS = 26;
 
-    public enum BtnFunctionality { Add, Remove }
+    public enum BtnFunctionality
+    {
+        Add,
+        Remove
+    }
 
-    [Parameter, EditorRequired] public Track Track { get; set; } = new();
-    [Parameter] public Client? Client { get; set; }
-    [Parameter] public BtnFunctionality? BtnFunc { get; set; }
-    [Parameter] public EventCallback<Track> OnClickCallback { get; set; }
+    [Parameter, EditorRequired]
+    public Track Track { get; set; } = new();
+
+    [Parameter]
+    public Client? Client { get; set; }
+
+    [Parameter]
+    public BtnFunctionality? BtnFunc { get; set; }
+
+    [Parameter]
+    public EventCallback<Track> OnClickCallback { get; set; }
 
     private async Task OnButtonClick() => await OnClickCallback.InvokeAsync(Track);
 }
