--- a/Rick-Player.Main/Pages/CurrentlyPlayingPage.razor
+++ b/Rick-Player.Main/Pages/CurrentlyPlayingPage.razor
@@ -18,7 +18,7 @@
 
         <MudPaper Class="pa-4" MaxWidth="350px">
             <MudStack>
-                <MudImage Class="rounded-lg align-self-center" Fluid="true" Src=@_currentVote.VotedTrack.CoverSizesUrl[(int)CoverSize.Medium] Alt="Album current playing" Elevation="25" />
+                <MudImage Class="rounded-lg align-self-center" Fluid="true" Src=@_currentVote.VotedTrack.CoverSizesUrl[(int)CoverSize.High] Alt="Album current playing" Elevation="25" />
 
                 <MudDivider Class="my-2" DividerType="DividerType.Middle" />
 
