--- a/Rick-Player.Main/Shared/NavMenu.razor
+++ b/Rick-Player.Main/Shared/NavMenu.razor
@@ -1,11 +1,17 @@
-﻿<MudNavMenu Color="Color.Primary">
+﻿<MudNavMenu Rounded="true" Margin="Margin.Normal" Color="Color.Tertiary" Class="pa-2">
+    <MudIcon Icon="@Icons.Custom.Uncategorized.Bacteria" Size="Size.Large"/>
+    <MudText Typo="Typo.body1" Align="Align.Center" Class="mt-n6 mb-1">Rick Player</MudText>
+    <br/>
+    <MudDivider DividerType="DividerType.Middle"/>
+    <br/>
+    @* <MudNavLink Icon="@Icons.Custom.Uncategorized.Bacteria" Size="Size.Large">Rick Player</MudNavLink> *@
     <MudNavLink Href="currently-playing" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.PlayCircle">Tocando</MudNavLink>
     <MudNavLink Href="queue" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.QueueMusic">Fila de prioridade</MudNavLink>
     <MudNavLink Href="search" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Search">Busca</MudNavLink>
 
-    <br />
+    <br/>
     <MudDivider DividerType="DividerType.Middle"/>
-    <br />
+    <br/>
 
     <MudNavLink Href="help" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.Help">Ajuda</MudNavLink>
     <MudNavLink Href="info" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Info">Sobre</MudNavLink>
