--- a/Rick-Player.Main/_Imports.razor
+++ b/Rick-Player.Main/_Imports.razor
@@ -1,4 +1,5 @@
-﻿@using System.Net
+﻿@using System
+@using System.Net
 @using System.Net.Http
 @using System.Net.Http.Json
 @using System.Threading
@@ -11,6 +12,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Microsoft.Extensions.Localization
+
 
 @using Rick_Player.Main
 @using Rick_Player.Main.Data
